--- a/docs/04-explore-cardano/04-cardano-network/index.mdx
+++ b/docs/04-explore-cardano/04-cardano-network/index.mdx
@@ -165,7 +165,7 @@ do not access the internal state of the node.
 
 ### Request response protocol
 
-The request esponse protocol is polymorphic in the request and response data
+The request response protocol is polymorphic in the request and response data
 that is being transmitted. This means that there are different possible
 applications of this protocol and the application of the protocol determines the
 types of requests sent and responses received.
