Fix the title so that the faucet link works

--- a/docs/06-cardano-testnets/index.mdx
+++ b/docs/06-cardano-testnets/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Cardano testnets
-metaTitle: Cardano testnets
+metaTitle: Cardano testnet
 sidebar_position: 6
 collapsible: true
 collapsed: true
