Add a note about delegation for regular users

--- a/docs/03-learn/04-delegation.mdx
+++ b/docs/03-learn/04-delegation.mdx
@@ -25,6 +25,12 @@ There are three options ada holders can consider for delegating their stake:
 2. Agree with a third party to run a private stake pool for them
 3. Delegate to other stake pools.
 
+:::note
+
+If you are not familiar with Cardano CLI or stake pool operations, see [delegation tips here.](/new-to-cardano/how-to-delegate)
+
+:::
+
 ## Stake delegation requirements
 
 Delegating stake requires posting two certificates to the chain: a staking
@@ -79,7 +85,6 @@ Related topics:
 
 - [Operating a stake pool](https://developers.cardano.org/docs/operate-a-stake-pool/)
 - [Advice for stakeholders - delegators and stake pool operators](https://iohk.io/en/blog/posts/2020/11/13/the-general-perspective-on-staking-in-cardano/)
-- [How to stake your ada](https://www.essentialcardano.io/infographic/how-to-stake-your-ada)
 
 :::
 
