--- a/docs/02-new-to-cardano/index.mdx
+++ b/docs/02-new-to-cardano/index.mdx
@@ -8,6 +8,5 @@ The understanding of basic concepts plays an integral role in getting acquainted
 with blockchain and [Cardano](https://cardano.org/) in particular. In this
 section, we start our journey with basic concepts such as the notion of
 blockchain, understanding
-consensus, and what is a
-cryptocurrency. You will also find out about various types of wallets and tracking tools, and understand why smart
-contracts matter. 
+proof of stake, and what is a
+cryptocurrency. You will also find out about various types of wallets and tracking tools, and learn about the delegation options. 
