--- a/docs/02-new-to-cardano/10-what-is-a-smart-contract.mdx
+++ b/docs/02-new-to-cardano/10-what-is-a-smart-contract.mdx
@@ -13,13 +13,13 @@ Cardano introduced smart contract support in 2021. As a multi-functional
 environment, Cardano now supports the development and deployment of smart
 contracts using different programming languages. Here are some examples:
 
-- [Plutus](/smart-contracts/plutus/learn-about-plutus/) — a purpose-built smart contract development and execution
+- [Plutus](https://plutus.readthedocs.io/en/latest/) — a purpose-built smart contract development and execution
   platform. Plutus contracts consist of parts that run on the blockchain
   (on-chain code) and parts that run on a user’s machine (off-chain or client
   code). Plutus draws from modern language research to provide a safe,
   full-stack programming environment based on Haskell, the leading functional
   programming language.
-- [Marlowe](/smart-contracts/marlowe/) — a domain-specific language (DSL) for writing and executing
+- [Marlowe](https://docs.marlowe.iohk.io/docs/introduction) — a domain-specific language (DSL) for writing and executing
   financial contracts that allows building contracts visually as well as in more
   traditional code. Financial institutions can use it to develop and deploy
   custom instruments for their customers and clients, for example. The Marlowe
