add a full stop

--- a/docs/04-explore-cardano/03-cardano-architecture.mdx
+++ b/docs/04-explore-cardano/03-cardano-architecture.mdx
@@ -23,7 +23,7 @@ combinations of components):
 - [Cardano db-sync](https://github.com/input-output-hk/cardano-db-sync)
 - [GraphQL](https://github.com/input-output-hk/cardano-graphql) API server
   (Apollo)
-- [SMASH server](https://github.com/IntersectMBO/cardano-db-sync/tree/master/cardano-smash-server)
+- [SMASH server](https://github.com/IntersectMBO/cardano-db-sync/tree/master/cardano-smash-server).
 
 ## Nodes and remote nodes
 
