--- a/docs/07-development-guidelines/02-cardano-node-course.mdx
+++ b/docs/07-development-guidelines/02-cardano-node-course.mdx
@@ -4,7 +4,7 @@ metaTitle: The Cardano node video course
 ---
 
 
-The IOG Academy provides this course on YouTube.  
+The IOG Academy provides this course on YouTube. See the accompanying [handbook for step-by-step details](https://cardano-course.gitbook.io/cardano-course/handbook).
 
 | Video | Summary |  
 | -------- | --------- |   
