--- a/docs/16-release-notes/02-release-notes.mdx
+++ b/docs/16-release-notes/02-release-notes.mdx
@@ -6,10 +6,8 @@ sidebar_position: 1
 
 Here is the latest release information for the Cardano components. Component
 dependencies and compatibility information can be found in the
-[compatibility matrix](/release-notes/comp-matrix). Release
-notes for Cardano can be found in the
-[Cardano platform > Updates](https://iohk.zendesk.com/hc/en-us/sections/360002160134-Updates)
-section of the IOHK support desk.
+[compatibility matrix](/release-notes/comp-matrix). Release notes for specific
+components are available on each component's release page.
 
 Cardano node configuration details (for mainnet and testnets) are available on
 the
@@ -19,14 +17,10 @@ the
 
 | Name                                                                                | Version                                                                                     | Release date      |
 | ----------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------- | ----------------- |
-| [Cardano node](https://github.com/input-output-hk/cardano-node)                     | [8.9.1](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.1)                    | 25 March, 2024    |
-| [Cardano RTView](https://github.com/input-output-hk/cardano-rt-view)                | [0.3.0](https://github.com/input-output-hk/cardano-rt-view/releases/tag/0.3.0)              | 15 January, 2021  |
-| [Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync/releases)      | [13.2.0.1](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.1)           | 15 February, 2023     |
-| [Cardano Rosetta](https://github.com/input-output-hk/cardano-rosetta)               | [2.2.1](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.1)           | 13 March, 2024  |
-| [Cardano GraphQL](https://github.com/input-output-hk/cardano-graphql)               | [8.0.0](https://github.com/input-output-hk/cardano-graphql/releases/tag/8.0.0)              | 7 February, 2023  |
-| [Cardano Explorer](https://github.com/input-output-hk/cardano-explorer-app)         | [1.6.0](https://github.com/input-output-hk/cardano-explorer-app/releases/tag/1.6.0)         | 27 July, 2021     |
-| [Cardano transactions](https://github.com/input-output-hk/cardano-transactions)     | [1.0.0](https://github.com/input-output-hk/cardano-transactions/releases/tag/1.0.0)         | 21 April, 2020    |
-| [Cardano addresses](https://github.com/input-output-hk/cardano-addresses)           | [3.12.0](https://github.com/input-output-hk/cardano-addresses/releases/tag/3.12.0)          | 17 August, 2022   |
-| [Cardano coin selection](https://github.com/input-output-hk/cardano-coin-selection) | [1.0.1](https://github.com/input-output-hk/cardano-coin-selection/releases/tag/v1.0.1)      | 13 May, 2020      |
-| [Bech32](https://github.com/input-output-hk/bech32)                                 | [1.1.5](https://github.com/IntersectMBO/bech32/releases/tag/v1.1.5)                         | 28 July, 2023     |
-| [Cardano wallet](https://github.com/input-output-hk/cardano-wallet)                 | [v2024-03-27](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-27) | 28 March, 2024 |
+| [Cardano node](https://github.com/IntersectMBO/cardano-node)                        | [8.9.1](https://github.com/IntersectMBO/cardano-node/releases/tag/8.9.1)                    | 25 March, 2024    |
+| [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync)                  | [13.2.0.1](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.2.0.1)           | 15 February, 2024 |
+| [Cardano Rosetta](https://github.com/cardano-foundation/cardano-rosetta)            | [2.2.1](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.2.1)           | 13 March, 2024    |
+| [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql)            | [8.0.0](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.0.0)           | 7 February, 2023  |
+| [Cardano addresses](https://github.com/IntersectMBO/cardano-addresses)              | [3.12.0](https://github.com/IntersectMBO/cardano-addresses/releases/tag/3.12.0)             | 17 August, 2022   |
+| [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet)              | [v2024-03-27](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-03-27)| 28 March, 2024    |
+| [Bech32](https://github.com/IntersectMBO/bech32)                                    | [1.1.5](https://github.com/IntersectMBO/bech32/releases/tag/v1.1.5)                         | 23 February, 2024 |
