--- a/docs/07-development-guidelines/04-smart-contracts/01-plutus.mdx
+++ b/docs/07-development-guidelines/04-smart-contracts/01-plutus.mdx
@@ -10,7 +10,7 @@ To start developing with Plutus, see:
 
 - [Plutus Core documentation](https://plutus.readthedocs.io/en/latest/index.html)
 - [Developer portal Plutus overview](https://developers.cardano.org/docs/smart-contracts/plutus)
-- See 'Resources' below for more details.
+- 'Plutus resources' below for more details.
 
 :::
 
@@ -134,14 +134,7 @@ it is essential to know the basics of Haskell. To help with the onboarding
 journey, IOG's education team created the Haskell course for beginners. You can
 find the repository with explainers, links to lectures, and more below.
 
-- [Haskell course](https://github.com/input-output-hk/haskell-course#haskell-course)
-
-### Cardano node API documentation
-
-**Developer resources**:
-
-- [Cardano node API documentation](https://input-output-hk.github.io/cardano-node/):
-  the Haddock-generated documentation for the Cardano node API.
+- [Haskell course](https://github.com/input-output-hk/haskell-course#haskell-course).
 
 ## Plutus user documentation
 
@@ -150,7 +143,7 @@ explanations, tutorials, how-to guides, etc.
 
 **Documentation**:
 
-- [Plutus Core and Plutus Tx User Guide](https://plutus.readthedocs.io/en/latest/):
+- [Plutus Core and Plutus Tx user guide](https://plutus.readthedocs.io/en/latest/):
   introduces the Plutus Core programming language and programming with Plutus
   Tx. Documentation includes explanations, tutorials, how-to instructions,
   troubleshooting, and reference information:
@@ -214,9 +207,6 @@ contracts on Cardano:
   integration, automation tools, decentralized protocols, enterprise apps, stake
   pool tooling, and more.
 
-- **IOG**
-  - [Plutus tools overview](https://plutus-apps.readthedocs.io/en/latest/plutus/explanations/plutus-tools-component-descriptions.html#)
-
 - **Emurgo**
   - [Cardano serialization library](https://github.com/Emurgo/cardano-serialization-lib#readme)
 
@@ -265,27 +255,3 @@ contracts on Cardano:
   - [Koios](https://koios.rest)
   - [Lucid](https://github.com/spacebudz/lucid#readme)
 
-## Environment setup
-
-**Windows Subsystem for Linux**
-
-- [Windows/WSL2 (2nd alternative) - Plutus Community Docs](https://plutus-community.readthedocs.io/en/latest/#Environment/Build/WindowsWSL/)
-- [How to uninstall WSL2 on Windows 10](https://pureinfotech.com/uninstall-wsl2-windows-10/)
-- [How to install WSL2 (Windows Subsystem for Linux 2) on Windows 10 - Pureinfotech](https://pureinfotech.com/install-windows-subsystem-linux-2-windows-10/)
-- [Running Plutus on WSL - Create Cardano (ADA) Contracts on Windows 10 - YouTube](https://www.youtube.com/watch?v=mnfItts6VbU)
-- [Plutus Smart Contract Development: Running Plutus on Windows with WSL - YouTube](https://www.youtube.com/watch?v=g2F9raiGp_s)
-
-**Nix**
-
-- [Alternative Haskell Infrastructure for Nixpkgs](https://input-output-hk.github.io/haskell.nix/index.html)
-- [Plutus Community Docs - Nix environment setup for Linux (Ubuntu & Linux Arch)](https://plutus-community.readthedocs.io/en/latest/#Environment/Build/Ubuntu/)
-- [Nix Flakes, Part 1: An introduction and tutorial - Tweag](https://www.tweag.io/blog/2020-05-25-flakes/)
-- [Flakes - NixOS Wiki](https://nixos.wiki/wiki/Flakes)
-- [episode 0 - Why Nix? - YouTube](https://www.youtube.com/watch?v=UNcv5XlIfu0&list=PLErve0z4I-unD_Kz9LuK7fm_0xaZPyKA4)
-
-## Video content for developers
-
-- [Plutus Office Hours with Lars - announced on Discord](https://discord.com/channels/826816523368005654/897221118111400007)
-- [NerdOut - YouTube Playlist For Cardano Developers by Andrew Westberg](https://www.youtube.com/playlist?list=PLee7sQnxtLo4g-rtxwGHbkou3lVxpgvW_)
-- [Loxe Inc. - Cardano Builders Check-In](https://youtube.com/playlist?list=PLzRV1oB99VB7zGbzi_qBsctCgP-C41n5A)
-- [Cardano - DApp360 Workforce LLC - School for Cardano Developers](https://www.dapp360.io/d360-training/cardano/)
