Update and rename docs/13-smart-contracts/01-marlowe.mdx to docs/07-development-guidelines/04-smart-contracts/02-marlowe.mdx

--- a/docs/07-development-guidelines/04-smart-contracts/02-marlowe.mdx
+++ b/docs/07-development-guidelines/04-smart-contracts/02-marlowe.mdx
@@ -41,7 +41,7 @@ The deployment of Marlowe onto the mainnet includes the following features:
 
 ## Get started with Marlowe
 
-To get started with Marlowe, find the various resources on the updated
+To get started with Marlowe, find the various resources on the
 [documentation website](https://docs.marlowe.iohk.io/docs/introduction):
 
 - [Tutorials](https://docs.marlowe.iohk.io/tutorials)
