Update and rename docs/13-smart-contracts/02-aiken.mdx to docs/07-development-guidelines/04-smart-contracts/03-aiken.mdx

--- a/docs/07-development-guidelines/04-smart-contracts/03-aiken.mdx
+++ b/docs/07-development-guidelines/04-smart-contracts/03-aiken.mdx
@@ -4,8 +4,13 @@ metaTitle: Learn about Aiken
 sidebar_position: 3
 ---
 
-> ⚠️ Please note that Aiken is still in development and is not yet recommended
-> for use in production environments.
+:::note
+
+Please note that Aiken is still in development and is not yet recommended
+for use in production environments.
+
+:::
+
 
 Aiken is a new programming language and toolchain for developing smart contracts
 on the Cardano blockchain. It draws inspiration from various modern languages,
