Update and rename docs/11-scalability-solutions/01-hydra.mdx to docs/07-development-guidelines/05-scalability/01-hydra.mdx

--- a/docs/07-development-guidelines/05-scalability/01-hydra.mdx
+++ b/docs/07-development-guidelines/05-scalability/01-hydra.mdx
@@ -4,9 +4,7 @@ metaTitle: Hydra
 sidebar_position: 1
 ---
 
-Hydra is Cardano’s layer 2 scalability solution, aiming to increase transaction
-speed through low latency and high throughput also offering minimized
-transaction cost.
+Hydra is a layer 2 scaling solution for Cardano rooted in peer-reviewed research that increases transaction throughput and ensures cost efficiency while maintaining rigorous security.
 
 Hydra Head is the first protocol of the Hydra family of protocols, which
 embodies the foundation for more advanced deployment scenarios relying on
@@ -14,12 +12,11 @@ isomorphic, multi-party state channels. Each Hydra Head works as an off-chain
 mini ledger shared between a small group of participants. Developers can use
 Hydra Heads to add specialized, complex protocols on top of Cardano.
 
-### Development resources:
+### Developer documentation
 
-- [Hydra Head proof-of-concept repository](https://github.com/input-output-hk/hydra-poc#readme)
-- [Hydra Head documentation](https://hydra.family/head-protocol/)
+- [Hydra Head documentation](https://hydra.family/head-protocol/).
 
-### Further reading:
+### Further reading
 
 - [Hydra – Cardano’s solution for ultimate layer 2 scalability](https://iohk.io/en/blog/posts/2021/09/17/hydra-cardano-s-solution-for-ultimate-scalability/)
   blog post
@@ -28,4 +25,4 @@ Hydra Heads to add specialized, complex protocols on top of Cardano.
 - [Hydra: Fast Isomorphic State Channels](https://iohk.io/en/research/library/papers/hydra-fast-isomorphic-state-channels/)
   research paper
 - [Interhead Hydra: Two Heads are Better than One](https://iohk.io/en/research/library/papers/interhead-hydra-two-heads-are-better-than-one/)
-  research paper
+  research paper.
