--- a/docs/07-development-guidelines/05-scalability/02-mithril.mdx
+++ b/docs/07-development-guidelines/05-scalability/02-mithril.mdx
@@ -10,23 +10,23 @@ state. These snapshots can be useful in multiple use cases such as secure
 voting, data exchange, and synchronization between applications, sidechains,
 light wallets, etc.
 
-The first application of Mithril will allow faster bootstrapping of Cardano
+The first application of Mithril allows faster bootstrapping of Cardano
 nodes. As each node has a full copy of the blockchain and needs to verify each
 block from the history, it takes a significant amount of time to start a new
 node from scratch. With Mithril, it is possible to start a node from a
 predefined state, with the same security guarantees that the chain itself
 provides, but much faster.
 
-### Development resources:
+## Developer documentation
 
-- [Mithril proof-of-concept repository](https://github.com/input-output-hk/mithril#readme)
-- [Mithril documentation](https://mithril.network/doc/)
+- [Mithril documentation](https://mithril.network/doc/).
 
-### Further reading:
+### Further reading
 
+- [Mithril nears mainnet release](https://iohk.io/en/blog/posts/2023/07/20/mithril-nears-mainnet-release/) blog post
 - [Mithril proof of concept is now open-source](https://iohk.io/en/blog/posts/2022/08/29/mithril-proof-of-concept-is-now-open-source/)
   blog post
 - [Mithril: a stronger and lighter blockchain for better efficiency](https://iohk.io/en/blog/posts/2021/10/29/mithril-a-stronger-and-lighter-blockchain-for-better-efficiency/)
   blog post
 - [Mithril: Stake-based Threshold Multisignatures](https://iohk.io/en/research/library/papers/mithril-stake-based-threshold-multisignatures/)
-  research paper
+  research paper.
